<resources>
    <string name="app_name">Cloud Counselage Compass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_welcome">Welcome Back</string>
    <string name="log_in_info">Login to your account</string>
    <string name="sign_up_create_info">Create your new account </string>
    <string name="sign_up_create">Register</string>
    <string name="hello_gmail_com">hello@gmail.com</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="get">GET</string>
    <string name="in_time">IN TIME!</string>
    <string name="job_ready">JOB-READY</string>
    <string name="with">with</string>
    <string name="industry_academia_community_iac">INDUSTRY-ACADEMIA COMMUNITY(IAC)</string>
    <string name="all_12_community_benefits_are_absolutely_free">All 12 Community Benefits Are Absolutely Free</string>
    <string name="_36000">36000+</string>
    <string name="members_from_all_academic_years">MEMBERS from all academic years</string>
    <string name="_400">400+</string>
    <string name="colleges_pan_india">COLLEGES PAN India</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="google_logo">google_logo</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="profile_icon">profile_icon</string>
    <string name="chat_bot">chat_bot</string>
    <string name="logo">logo</string>
    <string name="go_back">go_back</string>
    <string name="cc_logo">cc_logo</string>
    <string name="bot_logo" />
    <string name="chatty">Chatty</string>
    <string name="type_message">Type message</string>
    <string name="send_logo">send_logo</string>
    <string name="dp_icon">dp_icon</string>
    <string name="hello_i_m_chatty_how_can_i_help_you">Hello!👋,I\'m Chatty.\nhow can i help you?</string>
    <string name="online">Online</string>
    <string name="typing">typing…</string>
    <string name="connecting">connecting…</string>
    <string name="password_txt">Password</string>
    <string name="copy_icon">copy_icon</string>
    <string name="email">Email</string>
    <string name="profile_pic">profile_pic</string>
    <string name="profile">Profile</string>
    <string name="home_gmail_com">home@gmail.com</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="des1">Please enter the email you used when registering your account and click "Send".\n\nWe will send an email with a link to a page where you can easily reset your password.</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="camera">camera</string>
    <string name="save">save</string>
    <string name="edit_icon">edit_icon</string>

</resources>