<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_pic_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/profile_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/profile_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RelativeLayout
            android:layout_width="180sp"
            android:layout_height="180sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_pic"
                    android:scaleType="fitXY"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:src="@drawable/boy"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:strokeColor="@color/dark_blue"
                    app:strokeWidth="5dp"
                    />
            <ImageView
                android:id="@+id/profile_pic_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/userImage"
                android:layout_alignBottom="@id/userImage"
                android:background="@drawable/rounded_shape"
                android:contentDescription="@string/camera"
                android:padding="8dp"
                android:src="@drawable/baseline_camera_alt_24" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="32sp"
        android:background="@drawable/profile_element_layout"
        android:text="@string/home_gmail_com"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_username" />

    <TextView
        android:id="@+id/hint_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:text="@string/email"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_tv" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="32sp"
        android:background="@drawable/profile_element_layout"
        android:text="@string/username"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_pic_ll" />

    <TextView
        android:id="@+id/hint_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36sp"
        android:text="@string/username"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_gradient_bg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:icon="@drawable/baseline_logout_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>